src/Sulu/Bundle/AdminBundle/Resources/js/components/Navigation/navigation.scss
@import '../../containers/Application/colors.scss';

$navigationBackgroundColor: $cloudBurst;
$color: $white;
$versionColor: $silver;
$userBackgroundColor: $pickledBluewood;
$buttonColor: $silver;
$pinColorLight: $shakespeare;
$pinColorDark: $cloudBurst;

.navigation {
    width: 260px;
    background-color: $navigationBackgroundColor;
    color: $color;
    min-height: 100%;
    opacity: .94;
    position: relative;
    display: flex;
    flex-direction: column;
}

.header {
    height: 60px;
    background-color: rgba(0, 0, 0, .15);
}

.header-content {
    padding: 20px 40px;
}

.header-icon {
    font-size: 20px;
    line-height: 20px;
    padding-right: 20px;
    vertical-align: middle;
    height: 100%;
}

.header-title {
    font-size: 16px;
    line-height: 20px;
    vertical-align: middle;
    height: 100%;
}

.user {
    min-height: 130px;
    background-color: $userBackgroundColor;
}

.user-content {
    padding: 40px;
    display: flex;
    font-size: 14px;
    line-height: 16px;
    align-items: center;

    img,
    .no-user-image {
        width: 50px;
        height: 50px;
        flex-grow: 0;
        flex-shrink: 0;
        border-radius: 25px;
        cursor: pointer;
    }

    .no-user-image {
        background-color: $silver;

        span {
            font-size: 30px;
            height: 100%;
            width: 100%;
            text-align: center;
            display: block;
            line-height: 50px;
        }
    }
}

.user-profile {
    margin-left: 20px;
    font-weight: 600;
    cursor: pointer;

    button {
        background: none;
        font-size: 12px;
        line-height: 16px;
        color: $buttonColor;
        border: none;
        margin-top: 10px;
        padding: 0;
        cursor: pointer;

        span {
            padding-right: 10px;
        }
    }
}

.items {
    flex-grow: 1;
}

.footer {
    display: flex;
    justify-content: center;
    padding: 20px;
}

.pin-container {
    flex: 0 0 auto;
}

.pin {
    background-color: transparent;
    border-color: $pinColorLight;
    color: $pinColorLight;
    margin-right: 20px;

    &:hover {
        background-color: $pinColorLight;
        color: $pinColorDark;
    }
}

.versions {
    flex: 1 1 auto;
    font-size: 10px;
    line-height: 14px;
    text-align: center;
    color: $versionColor;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    a {
        color: $versionColor;
        text-decoration: none;

        &:hover {
            text-decoration: underline;
        }
    }
}

